# Project-Genesis

./: .gitignore  BASELINES.md  CLAUDE.md  Cargo.toml  GOAL.md  LICENSE  QUESTIONS.md  README.md  ROADMAP.md  SHIFTLOG.md  rust-toolchain.toml
Prompts/: BuildEngine.md  BuildObserver.md  BuildPhysics.md  BuildRenderer.md  BuildUI.md  CLAUDE.md  MASTER_PROMPT.md
Prompts/architecture/: coding_standards.md  folder_structure.md  roadmap.md
Prompts/spec/: AI.md  Emergence.md  Gameplay.md  Interaction.md  Observer.md  Particle.md  Performance.md  Physics.md  Rendering.md  USS.md
configs/: bench-quiet.ron  env-gradient.ron  full-stack.ron  gradient-sieve.ron  lod.ron  sieve.ron
crates/genesis-config/: Cargo.toml
crates/genesis-config/src/: actions.rs  lib.rs  rules.rs
crates/genesis-core/: Cargo.toml
crates/genesis-core/src/: hash.rs  lib.rs  rng.rs  torus.rs  vec2.rs
crates/genesis-headless/: Cargo.toml
crates/genesis-headless/src/: analysis.rs  evolve.rs  main.rs  search.rs  sweep.rs
crates/genesis-observer/: Cargo.toml
crates/genesis-observer/src/: lib.rs  score.rs
crates/genesis-observer/tests/: replay_compat.rs  score_determinism.rs
crates/genesis-persist/: Cargo.toml
crates/genesis-persist/src/: branch.rs  lib.rs
crates/genesis-render/: Cargo.toml
crates/genesis-render/src/: brush.rs  inspect.rs  lib.rs  pacer.rs  raster.rs
crates/genesis-sim/: Cargo.toml
crates/genesis-sim/src/: bonds.rs  components.rs  env.rs  grid.rs  impact.rs  interact.rs  lib.rs  lod.rs  physics.rs  snapshot.rs  store.rs
crates/genesis-sim/tests/: configs.rs  packs.rs
docs/: PLAYBOOK.md
docs/design/: guide.md  ui.md  visuals.md
docs/guide/: 01-what-genesis-is.md  05-headless-cli.md  06-authoring-worlds.md  07-actions-scripts-replay.md  08-saves-forks-timelines.md  09-observer.md  10-performance-scale.md  README.md
docs/research/: adaptive-detail.md  bond-storage.md  chunk-streaming.md  environment-fields.md  observer-design.md  phase3-exit-config.ron  phase3-exit-review.md  phase5-exit-review.md  player-actions.md  render-bootstrap.md  rotation.md  search-design.md
docs/research/sweeps/: 2026-07-13-search-01.md  2026-07-13-shipped-packs.md  2026-07-14-search-02.md  2026-07-14-shipped-packs-3k.md  2026-07-15-gradient-sieve.md  2026-07-15-headline-anatomy.md  2026-07-15-search-03.md  2026-07-16-search-04.md  2026-07-17-bounded-headline.md  2026-07-20-search-05.md
docs/research/sweeps/2026-07-13-search-01/: g005-i003.confirm.score.ron  g005-i004.confirm.score.ron  leaderboard.md  summary.ron
docs/research/sweeps/2026-07-13-search-01/g000/: g000-i000.ancestry.ron  g000-i000.pack.ron  g000-i000.score.ron  g000-i001.ancestry.ron  g000-i001.score.ron
docs/research/sweeps/2026-07-13-search-01/g001/: g001-i000.ancestry.ron  g001-i000.pack.ron  g001-i000.score.ron  g001-i001.ancestry.ron  g001-i001.config.ron  g001-i001.score.ron  g001-i002.ancestry.ron  g001-i002.pack.ron  g001-i002.score.ron  g001-i003.ancestry.ron  g001-i003.pack.ron  g001-i003.score.ron  g001-i004.ancestry.ron  g001-i004.config.ron  g001-i004.score.ron  g001-i005.ancestry.ron  g001-i005.config.ron  g001-i005.pack.ron  g001-i005.score.ron  g001-i006.ancestry.ron  g001-i006.pack.ron  g001-i006.score.ron  g001-i007.ancestry.ron  g001-i007.config.ron  g001-i007.score.ron
docs/research/sweeps/2026-07-13-search-01/g002/: g002-i000.ancestry.ron  g002-i000.pack.ron  g002-i000.score.ron  g002-i001.ancestry.ron  g002-i001.config.ron  g002-i001.score.ron  g002-i002.ancestry.ron  g002-i002.pack.ron  g002-i002.score.ron  g002-i003.ancestry.ron  g002-i003.pack.ron  g002-i003.score.ron  g002-i004.ancestry.ron  g002-i004.pack.ron  g002-i004.score.ron  g002-i005.ancestry.ron  (+8 more)
docs/research/sweeps/2026-07-13-shipped-packs/: actual.score.ron  bands.score.ron  chains.score.ron  churn.score.ron  diffusion.score.ron  echoes.score.ron  full-stack.score.ron  hoarders.score.ron  physics-only.score.ron  sandbox.score.ron
docs/research/sweeps/2026-07-14-search-02/: g006-i000.confirm.score.ron  g006-i009.20k.score.ron  g006-i009.confirm.score.ron  leaderboard.md  summary.ron
docs/research/sweeps/2026-07-14-shipped-packs-3k/: actual.score.ron  bands.score.ron  chains.score.ron  churn.score.ron  diffusion.score.ron  echoes.score.ron  full-stack.score.ron  hoarders.score.ron  physics-only.score.ron  sandbox.score.ron  sieve.score.ron  table.md
docs/research/sweeps/2026-07-15-gradient-sieve/: gradient-sieve-3k.score.ron
docs/research/sweeps/2026-07-15-headline-anatomy/: anatomy.py  probes.txt
docs/research/sweeps/2026-07-15-search-03/: g005-i005.confirm.score.ron  g006-i009.confirm.score.ron  leaderboard.md  summary.ron
docs/research/sweeps/2026-07-16-search-04/: g008-i001.confirm.score.ron  g008-i003.20k.score.ron  g008-i003.confirm.score.ron  g008-i005.confirm.score.ron  leaderboard.md  summary.ron
docs/research/sweeps/2026-07-17-bounded-headline/: actual.20k.score.ron  chains.20k.score.ron  full-stack.20k.score.ron  g006-i009.20k.score.ron  g008-i003.20k.score.ron  sandbox.20k.score.ron
docs/research/sweeps/2026-07-20-search-05/: g005-i003.20k.score.ron  g005-i003.confirm.score.ron  g006-i001.confirm.score.ron  g006-i005.confirm.score.ron  leaderboard.md  summary.ron
packs/: README.md  actual.ron  bands.ron  chains.ron  churn.ron  diffusion.ron  echoes.ron  gradient-sieve.ron  hoarders.ron  sandbox.ron  sieve.ron
palettes/: colorblind.ron  debug-gray.ron  default.ron
scripts/: bombardment.ron  full-stack.ron  rift.ron  spin-up.ron  terraform-west.ron
sweeps/: search-01.ron  search-02.ron  search-03.ron  search-04.ron  search-05.ron  shipped-packs-3k.ron  shipped-packs.ron
tools/: run-app.ps1
(+1029 files in other folders)
