[package]
name = "genesis-render"
version.workspace = true
edition.workspace = true

# The library is step 1 of docs/research/render-bootstrap.md: the extraction
# core — pure functions from snapshot state to plain RenderFrame data, fully
# headless, and it must never need Bevy to build or test.
#
# The windowed app (step 2) lives behind the `app` feature: full Bevy stays
# out of `cargo test --workspace` and CI, and only a dev machine with a
# display builds `genesis-app` (`cargo run -p genesis-render --features app
# --bin genesis-app`).
[dependencies]
genesis-core = { workspace = true }
genesis-config = { workspace = true }
genesis-observer = { workspace = true }
genesis-sim = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }

# default-features = false: the defaults pull wayland, gamepad (gilrs),
# audio (alsa), and clipboard backends that need system dev libraries
# (pkg-config, libwayland-dev, libudev-dev, libasound2-dev). This set is 2D
# sprites + gizmos + UI text over winit/X11 (X11 loads at runtime via dlopen,
# no build-time system deps) — everything the shell draws with, nothing more.
bevy = { version = "0.19", optional = true, default-features = false, features = [
    "2d_bevy_render",
    "ui_bevy_render",
    "bevy_text",
    "default_app",
    "std",
    "bevy_winit",
    "x11",
    "default_font",
    "multi_threaded",
    "keyboard",
    "mouse",
] }
clap = { workspace = true, optional = true }
# Feature-unification shim: bevy 0.19 compiles wgpu with vulkan/dx12/metal
# only and forwards no `gles` feature. Naming wgpu here with `gles` adds the
# GL(ES) backend to the one shared wgpu build, which is what reaches a real
# GPU on WSLg (WGPU_BACKEND=gl → EGL → Mesa's GL-over-D3D12); without it the
# only Linux adapter WSLg offers is llvmpipe software vulkan.
wgpu = { version = "29", optional = true, default-features = false, features = ["gles"] }

[features]
app = ["dep:bevy", "dep:clap", "dep:wgpu"]

[[bin]]
name = "genesis-app"
path = "src/bin/app.rs"
required-features = ["app"]
